Bug 1875137 - Don't ignore state changes in display: none subtrees if needed for :has(). r=dshin

Just like we do for attribute invalidation.

Differential Revision: https://phabricator.services.mozilla.com/D198929